--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ remote_theme : poole/hyde
 title:            Hyde
 tagline:          'A Jekyll theme'
 description:      'A brazen two-column <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that pairs a prominent sidebar with uncomplicated content. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:              https://dawoon.github.io
+url:              "https://dawoon.github.io"
 baseurl:          ""
 
 author:
