--- a/_config.yml
+++ b/_config.yml
@@ -10,15 +10,15 @@ relative_permalinks: true
 remote_theme : poole/hyde
 
 # Setup
-title:            Hyde
-tagline:          'A Jekyll theme'
-description:      'A brazen two-column <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that pairs a prominent sidebar with uncomplicated content. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
+title:            "Hyde"
+tagline:          "A Jekyll theme"
+description:      "A brazen two-column <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that pairs a prominent sidebar with uncomplicated content. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>."
 url:              "https://rhdrlvnd.github.io/dawoon.github.io/"
 baseurl:          ""
 
 author:
-  name:           'Mark Otto'
-  url:            https://twitter.com/mdo
+  name:           "Mark Otto"
+  url:            "https://twitter.com/mdo"
 
 paginate:         5
 
@@ -26,4 +26,4 @@ paginate:         5
 version:          2.1.0
 
 github:
-  repo:           https://github.com/poole/hyde
+  repo:           "https://github.com/poole/hyde"
