--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ permalink:        pretty
 relative_permalinks: true
 
 #Remote
-remote_theme : poole/hyde
+remote_theme: adobe/hyde-theme@v1.0.0
 
 # Setup
 title:            "Hyde"
