--- a/_config.yml
+++ b/_config.yml
@@ -1,24 +1,23 @@
 # Dependencies
-highlighter: rouge
-markdown: kramdown
+markdown:         kramdown
+highlighter:      rouge
 
 # Permalinks
 permalink:        pretty
 relative_permalinks: true
 
-#Remote
-remote_theme: adobe/hyde-theme@v1.0.0
+remote_theme : poole/hyde
 
 # Setup
-title:            "Hyde"
-tagline:          "A Jekyll theme"
-description:      "A brazen two-column <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that pairs a prominent sidebar with uncomplicated content. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>."
-url:              "https://rhdrlvnd.github.io/dawoon.github.io/"
-baseurl:          ""
+title:            Hyde
+tagline:          'A Jekyll theme'
+description:      'A brazen two-column <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that pairs a prominent sidebar with uncomplicated content. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
+url:              "https://rhdrlvnd.github.io"
+baseurl:          "/dawoon.github.io"
 
 author:
-  name:           "Mark Otto"
-  url:            "https://twitter.com/mdo"
+  name:           'Mark Otto'
+  url:            https://twitter.com/mdo
 
 paginate:         5
 
@@ -26,4 +25,4 @@ paginate:         5
 version:          2.1.0
 
 github:
-  repo:           "https://github.com/poole/hyde"
+  repo:           https://github.com/poole/hyde
