--- a/_config.yml
+++ b/_config.yml
@@ -101,7 +101,7 @@ author:
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-       url: "mailto:rhdrlvnd@gmail.com"
+       url: "rhdrlvnd@gmail.com"
     - label: "Website"
       icon: "fas fa-fw fa-link"
       # url: "https://your-website.com"
