--- a/_config.yml
+++ b/_config.yml
@@ -271,7 +271,7 @@ defaults:
   # _posts
   - scope:
       path: ""
-      type: posts
+      type: docs
     values:
       layout: single
       author_profile: true
