--- a/_config.yml
+++ b/_config.yml
@@ -273,11 +273,11 @@ defaults:
       path: ""
       type: docs
     values:
-      layout: single
-      author_profile: true
-      read_time: true
-      comments: # true
-      share: true
-      related: true
+#       layout: single
+#       author_profile: true
+#       read_time: true
+#       comments: # true
+#       share: true
+#       related: true
       sidebar:
         nav: "docs"
