--- a/_config.yml
+++ b/_config.yml
@@ -269,7 +269,7 @@ sidebar:
   nav: "docs"
   
 comments:
-  provider               : "rhdrlvnd"
+  provider               : "disqus"
   disqus:
     shortname            : Dawoon's blog # Short-name
     
