--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,50 +1,40 @@
 # main links
 main:
-  #- title: "Quick-Start Guide"
-  #  url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
-  #- title: "About"
-  #  url: https://mmistakes.github.io/minimal-mistakes/about/
-  - title: "Category"
-    url: "/categories/"
-  - title: "Project"
-    url: /projects/
   - title: "About"
     url: "/about/"
-# - title: "Sample Posts"
-#   url: /year-archive/
-# - title: "Sample Collections"
-#   url: /collection-archive/
-# - title: "Sitemap"
-#   url: /sitemap/
+  - title: "Category"
+    url: "/categories/"
 
-docs:
-  - title: Machine Learning
-    children:
-      - title: "내 데이터로 CNN 돌려보기"
-        url: /_pages/cnn/
-      - title: "내 데이터로 ResNet 돌려보기"
-        url: /_pages/resnet/
-      - title: "AWS Sagemaker에서 ResNet 돌려보기"
-        url: /_pages/sagemaker/
 
-  - title: Algorithm
-    children:
-      - title: "Configuration"
-        url: /docs/configuration/
 
-  - title: Server
+# 블로그 만들기 포스트 사이드바
+sidebar-blogging:
+  - title: "블로그를 만들자!"
     children:
-      - title: "Configuration"
-        url: /docs/configuration/
+    - title: "github.io 블로그 구축하기"
+      url: "/blogging/minimal-mistakes-%ED%85%8C%EB%A7%88%EB%A5%BC-%EC%9D%B4%EC%9A%A9%ED%95%B4-githubio-%EB%B8%94%EB%A1%9C%EA%B7%B8-%EA%B5%AC%EC%B6%95%ED%95%98%EA%B8%B0/"
+    - title: "Travis-ci를 이용해 배포 자동화 시키기"
+      url: "/blogging/Travis-ci%EB%A5%BC-%ED%86%B5%ED%95%B4-%EB%B0%B0%ED%8F%AC%EC%9E%90%EB%8F%99%ED%99%94/"
+    - title: "Algolia를 적용시키기"
+      url: "/blogging/%EA%B2%80%EC%83%89-%EB%8F%84%EA%B5%AC%EC%9D%B8-Algolia%EB%A5%BC-%EC%A0%81%EC%9A%A9%ED%95%B4%EB%B3%B4%EC%9E%90/"
+    - title: "블로그 개발 환경 구축 정리"
+      url: "/blogging/%EB%B8%94%EB%A1%9C%EA%B7%B8-%ED%99%98%EA%B2%BD-%EA%B5%AC%EC%B6%95/"
 
-  - title: iOS
+  - title: "참고 코드"
     children:
-      - title: "[Swift] 네비게이션 바, 화면 이동"
-        url: /_pages/swift1/
-      - title: "[Swift] 웹뷰(WKWebView), 옵셔널 바인딩(optional binding)"
-        url: /_pages/swift2/
-
-  - title: Python
+      - title: "_config.yml 설정하기"
+        url: "/blogging/config-yml/"
+      - title: "블로그에서 사용하는 문법 정리"
+        url: "/blogging/Elements/"
+        
+# 워게임 포스트 사이드바
+sidebar-wargame:
+  - title: "Web"
     children:
-      - title: "Configuration"
-        url: /docs/configuration/
+    - title: "webhacking.kr"
+      url: "/tags/#webhackinag-kr"
+      
+  - title: "System"
+    children:
+    - title: "pwnable.kr"
+      url: "/tags/#pwnable-kr"
