--- a/_config.yml
+++ b/_config.yml
@@ -116,7 +116,7 @@ author:
       url: "https://github.com/rhdrlvnd"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
-      # url: "https://instagram.com/"
+      url: "https://www.instagram.com/wooooooooooooony/?hl=ko"
 
 # Site Footer
 footer:
